--- a/排序.md
+++ b/排序.md
@@ -2,7 +2,7 @@
 
 788. 逆序对的数量 https://www.acwing.com/problem/content/790/
 
-`
+```golang
 package main 
 
 import("fmt")
@@ -64,4 +64,4 @@ func main(){
     merge_sort(q,0,n-1)
     fmt.Println(ans)
 }
-`
+```
