feat:加入排序 二分

--- a/排序.md
+++ b/排序.md
@@ -3,42 +3,39 @@
 788. 逆序对的数量 https://www.acwing.com/problem/content/790/
 
 ```golang
-package main 
+package main
 
-import("fmt")
-
-var ans =0
 var tmp=make([]int,100001)
-
 func merge_sort(q []int,l,r int){
     if l>=r{
         return
     }
+	// split point
     mid:=(l+r)>>1
-    i,j,k:=l,mid+1,0
-
-    //计算完成后，要保证数组变得有序
-    merge_sort(q,l,mid)//排左边
-    merge_sort(q,mid+1,r)//排右边
-    
+    // sort both left and right
+    merge_sort(q,l,mid)
+    merge_sort(q,mid+1,r)
+	
+	i,j,k:=l,mid+1,0
     for i<=mid && j<=r{
         if q[i]<=q[j]{
             tmp[k]=q[i]
             k++
             i++
         }else{
-            ans+=mid-i+1
             tmp[k]=q[j]
             k++
             j++
         }
     }
+	// if left part has left value
     for i<=mid{
         tmp[k]=q[i]
         k++
         i++
         
     }
+	// if right part has left value
     for j<=r{
         tmp[k]=q[j]
         k++
@@ -52,16 +49,34 @@ func merge_sort(q []int,l,r int){
     }
 }
 
+```
 
 
-func main(){
-    var n int
-    fmt.Scanf("%d",&n)
-    q:=make([]int,n)
-    for i:=range q{
-        fmt.Scanf("%d",&q[i])
-    }
-    merge_sort(q,0,n-1)
-    fmt.Println(ans)
+### 快排
+
+```golang
+package main
+
+func quick_sort(q []int,l,r int){
+	if l >= r {return}
+	// decide pivot x
+	i, j,x := l-1, r+1 ,q[(l+r)>>1]
+	for i < j {
+		//do while, move then check
+		for {
+			i++
+			if q[i]>=x{break}
+		}
+		for {
+			j--
+			if q[j]<=x{break}
+		}
+		// the next step after swapping is i,j both move forward by 1
+		if i < j { q[i], q[j] = q[j], q[i] } 
+	}
+	//recursive left part and right part
+	quick_sort(q,l,j)
+	quick_sort(q,j+1,r)
 }
 ```
+
